--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,59 @@ Andorid/.gradle/4.1/fileHashes/resourceHashesCache.bin
 Andorid/.gradle/4.1/taskHistory/taskHistory.lock
 Andorid/.gradle/4.1/javaCompile/jarAnalysis.bin
 Andorid/build/android-profile/profile-2018-08-13-21-51-22-902.rawproto
+Andorid/local.properties
+Andorid/.idea/misc.xml
+Andorid/.idea/workspace.xml
+Andorid/.idea/caches/build_file_checksums.ser
+Andorid/.idea/codeStyles/Project.xml
+Andorid/build/android-profile/profile-2018-08-14-18-51-02-078.rawproto
+Andorid/build/android-profile/profile-2018-08-14-18-51-20-093.rawproto
+Andorid/build/android-profile/profile-2018-08-14-19-30-40-445.rawproto
+Andorid/.idea/libraries/Gradle__com_android_support_animated_vector_drawable_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_appcompat_v7_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_cardview_v7_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_design_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_multidex_1_0_1.xml
+Andorid/.idea/libraries/Gradle__com_android_support_multidex_instrumentation_1_0_1.xml
+Andorid/.idea/libraries/Gradle__com_android_support_recyclerview_v7_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_support_annotations_24_2_0_jar.xml
+Andorid/.idea/libraries/Gradle__com_android_support_support_compat_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_support_core_ui_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_support_core_utils_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_support_fragment_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_support_media_compat_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_support_v4_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_android_support_support_vector_drawable_24_2_0.xml
+Andorid/.idea/libraries/Gradle__com_facebook_android_facebook_android_sdk_4_1_0.xml
+Andorid/.idea/libraries/Gradle__com_github_bumptech_glide_glide_3_7_0_jar.xml
+Andorid/.idea/libraries/Gradle__com_github_rahatarmanahmed_circularprogressview_2_5_0.xml
+Andorid/.idea/libraries/Gradle__com_google_android_gms_play_services_analytics_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_android_gms_play_services_analytics_impl_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_android_gms_play_services_auth_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_android_gms_play_services_auth_base_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_android_gms_play_services_base_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_android_gms_play_services_basement_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_android_gms_play_services_tagmanager_v4_impl_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_android_gms_play_services_tasks_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_firebase_firebase_analytics_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_firebase_firebase_analytics_impl_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_firebase_firebase_auth_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_firebase_firebase_common_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_firebase_firebase_core_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_firebase_firebase_iid_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_google_firebase_firebase_messaging_10_0_1.xml
+Andorid/.idea/libraries/Gradle__com_kakao_sdk_auth_1_1_7.xml
+Andorid/.idea/libraries/Gradle__com_kakao_sdk_friends_1_1_7.xml
+Andorid/.idea/libraries/Gradle__com_kakao_sdk_kakaolink_1_1_7.xml
+Andorid/.idea/libraries/Gradle__com_kakao_sdk_kakaotalk_1_1_7.xml
+Andorid/.idea/libraries/Gradle__com_kakao_sdk_network_1_1_7.xml
+Andorid/.idea/libraries/Gradle__com_kakao_sdk_usermgmt_1_1_7.xml
+Andorid/.idea/libraries/Gradle__com_kakao_sdk_util_1_1_7.xml
+Andorid/.idea/libraries/Gradle__com_naver_speech_clientapi_naverspeech_sdk_android_1_1_3.xml
+Andorid/.idea/libraries/Gradle__com_nineoldandroids_library_2_4_0_jar.xml
+Andorid/.idea/libraries/Gradle__com_parse_bolts_bolts_android_1_2_0_jar.xml
+Andorid/.idea/libraries/Gradle__jp_co_cyberagent_android_gpuimage_gpuimage_library_1_3_0_jar.xml
+Andorid/.idea/libraries/Gradle__jp_wasabeef_glide_transformations_2_0_1.xml
+Andorid/app/app.iml
+Andorid/CommonModule/CommonModule.iml
+Andorid/Model/Model.iml
