트랙킹 제외 파일

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,61 @@ Andorid/.idea/libraries/Gradle__jp_wasabeef_glide_transformations_2_0_1.xml
 Andorid/app/app.iml
 Andorid/CommonModule/CommonModule.iml
 Andorid/Model/Model.iml
+Andorid/.idea/libraries/com_android_support_design_24_2_0.xml
+Andorid/.idea/libraries/com_android_support_cardview_v7_24_2_0.xml
+Andorid/.idea/libraries/com_android_support_appcompat_v7_24_2_0.xml
+Andorid/.idea/libraries/com_android_support_animated_vector_drawable_24_2_0.xml
+Andorid/.idea/libraries/android_android_26.xml
+Andorid/.idea/libraries/android_android_23.xml
+Andorid/.idea/libraries/jp_wasabeef_glide_transformations_2_0_1.xml
+Andorid/.idea/libraries/jp_co_cyberagent_android_gpuimage_gpuimage_library_1_3_0_jar.xml
+Andorid/.idea/libraries/com_parse_bolts_bolts_android_1_2_0_jar.xml
+Andorid/.idea/libraries/com_nineoldandroids_library_2_4_0_jar.xml
+Andorid/.idea/libraries/com_naver_speech_clientapi_naverspeech_sdk_android_1_1_3.xml
+Andorid/.idea/libraries/com_kakao_sdk_util_1_1_7.xml
+Andorid/.idea/libraries/com_android_support_support_core_utils_24_2_0.xml
+Andorid/.idea/libraries/com_android_support_support_core_ui_24_2_0.xml
+Andorid/.idea/libraries/com_android_support_support_compat_24_2_0.xml
+Andorid/.idea/libraries/com_android_support_support_annotations_24_2_0_jar.xml
+Andorid/.idea/libraries/com_android_support_recyclerview_v7_24_2_0.xml
+Andorid/.idea/libraries/com_android_support_multidex_instrumentation_1_0_1.xml
+Andorid/.idea/libraries/com_android_support_multidex_1_0_1.xml
+Andorid/build/generated/mockable-android-26.jar
+Andorid/build/generated/mockable-android-23.jar
+Andorid/build/android-profile/profile-2018-08-17-19-38-22-819.rawproto
+Andorid/.idea/libraries/com_google_firebase_firebase_iid_10_0_1.xml
+Andorid/.idea/libraries/com_google_firebase_firebase_core_10_0_1.xml
+Andorid/.idea/libraries/com_google_firebase_firebase_common_10_0_1.xml
+Andorid/.idea/libraries/com_google_firebase_firebase_auth_10_0_1.xml
+Andorid/.idea/libraries/com_google_firebase_firebase_analytics_impl_10_0_1.xml
+Andorid/.idea/libraries/com_google_firebase_firebase_analytics_10_0_1.xml
+Andorid/.idea/libraries/com_google_android_gms_play_services_tasks_10_0_1.xml
+Andorid/.idea/libraries/com_github_rahatarmanahmed_circularprogressview_2_5_0.xml
+Andorid/.idea/libraries/com_github_bumptech_glide_glide_3_7_0_jar.xml
+Andorid/.idea/libraries/com_facebook_android_facebook_android_sdk_4_1_0.xml
+Andorid/.idea/libraries/com_android_support_support_vector_drawable_24_2_0.xml
+Andorid/.idea/libraries/com_android_support_support_v4_24_2_0.xml
+Andorid/.idea/libraries/com_android_support_support_media_compat_24_2_0.xml
+Andorid/.idea/libraries/com_android_support_support_fragment_24_2_0.xml
+Andorid/build/android-profile/profile-2018-08-17-19-38-07-209.rawproto
+Andorid/build/android-profile/profile-2018-08-17-11-36-19-974.rawproto
+Andorid/build/android-profile/profile-2018-08-17-11-36-07-309.rawproto
+Andorid/build/android-profile/profile-2018-08-17-10-50-32-831.rawproto
+Andorid/build/android-profile/profile-2018-08-17-10-50-19-880.rawproto
+Andorid/build/android-profile/profile-2018-08-16-21-50-18-351.rawproto
+Andorid/build/android-profile/profile-2018-08-16-21-50-00-578.rawproto
+Andorid/.idea/libraries/com_kakao_sdk_usermgmt_1_1_7.xml
+Andorid/.idea/libraries/com_kakao_sdk_network_1_1_7.xml
+Andorid/.idea/libraries/com_kakao_sdk_kakaotalk_1_1_7.xml
+Andorid/.idea/libraries/com_kakao_sdk_kakaolink_1_1_7.xml
+Andorid/.idea/libraries/com_kakao_sdk_friends_1_1_7.xml
+Andorid/.idea/libraries/com_kakao_sdk_auth_1_1_7.xml
+Andorid/.idea/libraries/com_google_firebase_firebase_messaging_10_0_1.xml
+Andorid/.idea/libraries/com_google_android_gms_play_services_tagmanager_v4_impl_10_0_1.xml
+Andorid/.idea/libraries/com_google_android_gms_play_services_basement_10_0_1.xml
+Andorid/.idea/libraries/com_google_android_gms_play_services_base_10_0_1.xml
+Andorid/.idea/libraries/com_google_android_gms_play_services_auth_base_10_0_1.xml
+Andorid/.idea/libraries/com_google_android_gms_play_services_auth_10_0_1.xml
+Andorid/.idea/libraries/com_google_android_gms_play_services_analytics_impl_10_0_1.xml
+Andorid/.idea/libraries/com_google_android_gms_play_services_analytics_10_0_1.xml
+Andorid/.idea/vcs.xml
