트랙킹 제외 파일

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,27 @@ Andorid/.idea/libraries/com_google_android_gms_play_services_auth_10_0_1.xml
 Andorid/.idea/libraries/com_google_android_gms_play_services_analytics_impl_10_0_1.xml
 Andorid/.idea/libraries/com_google_android_gms_play_services_analytics_10_0_1.xml
 Andorid/.idea/vcs.xml
+Andorid/build/android-profile/profile-2018-08-18-00-15-58-027.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-15-53-402.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-14-14-914.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-11-19-909.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-06-44-524.rawproto
+Andorid/build/android-profile/profile-2018-08-17-21-12-04-595.rawproto
+Andorid/build/android-profile/profile-2018-08-17-21-11-36-478.rawproto
+Andorid/build/android-profile/profile-2018-08-17-21-11-07-384.rawproto
+Andorid/build/android-profile/profile-2018-08-17-21-07-05-052.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-40-42-191.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-40-37-149.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-10-46-489.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-09-39-999.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-08-20-942.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-35-09-157.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-30-48-815.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-29-16-874.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-26-18-827.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-22-42-479.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-22-37-737.rawproto
+Andorid/build/android-profile/profile-2018-08-18-00-18-17-575.rawproto
+Andorid/build/intermediates/dex-cache/cache.xml
+Andorid/build/generated/mockable-android-25.jar
+Andorid/.idea/libraries/android_android_25.xml
