메인 화면 2차 작업

--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,6 @@ Andorid/build/android-profile/profile-2018-08-18-00-18-17-575.rawproto
 Andorid/build/intermediates/dex-cache/cache.xml
 Andorid/build/generated/mockable-android-25.jar
 Andorid/.idea/libraries/android_android_25.xml
+Andorid/build/android-profile/profile-2018-08-20-20-49-46-205.rawproto
+Andorid/build/android-profile/profile-2018-08-20-20-56-19-828.rawproto
+Andorid/build/android-profile/profile-2018-08-20-20-56-45-566.rawproto
