--- a/Andorid/app/src/main/AndroidManifest.xml
+++ b/Andorid/app/src/main/AndroidManifest.xml
@@ -11,16 +11,22 @@
 
         <activity
             android:name=".component.activity.IntroActivity"
-            android:theme="@style/AppTheme.baseActivity"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.baseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".component.activity.MainActivity"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.baseActivity" />
 
     </application>
 
