메인화면 작업 3차분

--- a/Andorid/app/src/main/AndroidManifest.xml
+++ b/Andorid/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/FacebookApiKey"/>
+
         <activity
             android:name=".component.activity.IntroActivity"
             android:configChanges="orientation|screenSize"
