--- a/Andorid/CommonModule/build.gradle
+++ b/Andorid/CommonModule/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     // Naver-Speech SDK
     compile ('com.naver.speech.clientapi:naverspeech-sdk-android:1.1.3')
     // =============================================================================================
+
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
