캐스팅 화면 1depth - 챠트 아이템 적용

--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,22 @@ Andorid/build/android-profile/profile-2018-08-28-21-11-26-038.rawproto
 Andorid/build/android-profile/profile-2018-08-28-21-12-57-362.rawproto
 Andorid/build/android-profile/profile-2018-08-28-21-13-30-907.rawproto
 Andorid/build/android-profile/profile-2018-08-28-21-16-24-291.rawproto
+Andorid/build/android-profile/profile-2018-09-03-20-29-44-773.rawproto
+Andorid/build/android-profile/profile-2018-09-03-23-01-31-049.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-57-34-339.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-50-19-127.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-48-34-985.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-44-49-091.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-42-51-900.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-40-42-325.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-40-17-923.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-39-44-405.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-29-49-520.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-26-27-360.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-22-24-151.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-19-31-440.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-12-13-301.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-09-10-733.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-06-03-827.rawproto
+Andorid/build/android-profile/profile-2018-09-03-22-02-34-689.rawproto
+Andorid/build/android-profile/profile-2018-09-03-21-53-23-332.rawproto
