--- a/Andorid/app/src/main/AndroidManifest.xml
+++ b/Andorid/app/src/main/AndroidManifest.xml
@@ -56,6 +56,12 @@
             android:theme="@style/AppTheme.baseActivity" />
 
         <activity
+            android:name=".component.activity.CastingActivity"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.baseActivity" />
+
+        <activity
             android:name=".component.activity.ProfileActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
