캐스팅 화면 1depth - 캐스팅 상세 아이템 리스트 적용

--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,20 @@ Andorid/build/android-profile/profile-2018-09-03-22-09-10-733.rawproto
 Andorid/build/android-profile/profile-2018-09-03-22-06-03-827.rawproto
 Andorid/build/android-profile/profile-2018-09-03-22-02-34-689.rawproto
 Andorid/build/android-profile/profile-2018-09-03-21-53-23-332.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-57-19-655.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-10-32-729.rawproto
+Andorid/build/android-profile/profile-2018-09-04-21-36-13-566.rawproto
+Andorid/build/android-profile/profile-2018-09-04-21-33-45-357.rawproto
+Andorid/build/android-profile/profile-2018-09-04-21-32-27-702.rawproto
+Andorid/build/android-profile/profile-2018-09-04-21-27-03-318.rawproto
+Andorid/build/android-profile/profile-2018-09-04-20-19-07-150.rawproto
+Andorid/build/android-profile/profile-2018-09-04-20-18-50-531.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-36-20-889.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-24-36-942.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-16-34-980.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-09-38-281.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-08-12-686.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-06-23-444.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-53-58-501.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-36-27-985.rawproto
+Andorid/build/android-profile/profile-2018-09-04-22-14-22-405.rawproto
