캐스팅 화면 1depth - 타임라인 작성 및 댓글 달기 기능 적용

--- a/.gitignore
+++ b/.gitignore
@@ -288,3 +288,28 @@ Andorid/build/android-profile/profile-2018-09-04-22-06-23-444.rawproto
 Andorid/build/android-profile/profile-2018-09-04-22-53-58-501.rawproto
 Andorid/build/android-profile/profile-2018-09-04-22-36-27-985.rawproto
 Andorid/build/android-profile/profile-2018-09-04-22-14-22-405.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-59-23-743.rawproto
+Andorid/build/android-profile/profile-2018-09-05-20-31-08-487.rawproto
+Andorid/build/android-profile/profile-2018-09-05-20-27-43-375.rawproto
+Andorid/build/android-profile/profile-2018-09-05-20-24-43-690.rawproto
+Andorid/build/android-profile/profile-2018-09-05-20-23-15-623.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-35-44-571.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-30-47-010.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-16-23-023.rawproto
+Andorid/build/android-profile/profile-2018-09-05-20-57-33-214.rawproto
+Andorid/build/android-profile/profile-2018-09-05-20-18-29-968.rawproto
+Andorid/build/android-profile/profile-2018-09-05-19-50-23-933.rawproto
+Andorid/build/android-profile/profile-2018-09-05-18-23-51-472.rawproto
+Andorid/build/android-profile/profile-2018-09-05-18-22-44-736.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-50-28-808.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-48-41-110.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-47-59-089.rawproto
+Andorid/build/android-profile/profile-2018-09-05-20-49-29-082.rawproto
+Andorid/build/android-profile/profile-2018-09-05-20-39-50-205.rawproto
+Andorid/build/android-profile/profile-2018-09-05-20-33-35-896.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-55-49-801.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-54-03-776.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-53-08-453.rawproto
+Andorid/build/android-profile/profile-2018-09-05-22-01-03-969.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-08-36-549.rawproto
+Andorid/build/android-profile/profile-2018-09-05-21-45-22-519.rawproto
