캐스팅 화면 2depth - 선택형 입력 아이템 추가

--- a/.gitignore
+++ b/.gitignore
@@ -313,3 +313,24 @@ Andorid/build/android-profile/profile-2018-09-05-21-53-08-453.rawproto
 Andorid/build/android-profile/profile-2018-09-05-22-01-03-969.rawproto
 Andorid/build/android-profile/profile-2018-09-05-21-08-36-549.rawproto
 Andorid/build/android-profile/profile-2018-09-05-21-45-22-519.rawproto
+Andorid/build/android-profile/profile-2018-09-06-23-24-18-296.rawproto
+Andorid/build/android-profile/profile-2018-09-06-23-21-03-681.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-45-43-749.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-34-22-149.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-32-21-189.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-30-03-501.rawproto
+Andorid/build/android-profile/profile-2018-09-06-21-33-13-546.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-56-53-331.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-54-10-064.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-51-52-861.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-50-24-461.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-26-16-110.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-24-00-548.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-16-11-277.rawproto
+Andorid/build/android-profile/profile-2018-09-06-22-11-05-613.rawproto
+Andorid/build/android-profile/profile-2018-09-06-23-17-15-938.rawproto
+Andorid/build/android-profile/profile-2018-09-06-23-15-41-552.rawproto
+Andorid/build/android-profile/profile-2018-09-06-23-12-08-081.rawproto
+Andorid/build/android-profile/profile-2018-09-06-23-01-48-527.rawproto
+Andorid/build/android-profile/profile-2018-09-06-19-54-45-264.rawproto
+Andorid/build/android-profile/profile-2018-09-06-19-54-22-975.rawproto
