캐스팅 화면 2depth - 주관식 입력 아이템 추가 (캡 입력 , 이유 입력 아이템)

--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,33 @@ Andorid/build/android-profile/profile-2018-09-06-23-12-08-081.rawproto
 Andorid/build/android-profile/profile-2018-09-06-23-01-48-527.rawproto
 Andorid/build/android-profile/profile-2018-09-06-19-54-45-264.rawproto
 Andorid/build/android-profile/profile-2018-09-06-19-54-22-975.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-24-06-693.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-22-17-731.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-20-44-378.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-16-51-545.rawproto
+Andorid/build/android-profile/profile-2018-09-09-22-16-17-094.rawproto
+Andorid/build/android-profile/profile-2018-09-09-22-12-41-015.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-31-40-895.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-25-16-798.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-02-35-971.rawproto
+Andorid/build/android-profile/profile-2018-09-10-20-59-23-347.rawproto
+Andorid/build/android-profile/profile-2018-09-10-19-47-00-784.rawproto
+Andorid/build/android-profile/profile-2018-09-10-19-46-46-263.rawproto
+Andorid/build/android-profile/profile-2018-09-09-22-16-34-374.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-46-52-040.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-42-47-143.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-37-12-349.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-12-17-810.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-09-40-316.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-07-18-412.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-05-51-226.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-04-19-727.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-05-51-663.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-52-14-744.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-13-52-725.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-16-18-809.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-11-26-033.rawproto
+Andorid/build/android-profile/profile-2018-09-10-21-26-14-119.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-22-44-723.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-19-49-613.rawproto
+Andorid/build/android-profile/profile-2018-09-10-22-18-19-471.rawproto
