캐스팅 화면 3depth - 캐스트 랭킹 리스트 아이템 추가

--- a/Andorid/app/src/main/AndroidManifest.xml
+++ b/Andorid/app/src/main/AndroidManifest.xml
@@ -82,7 +82,7 @@
             android:theme="@style/AppTheme.baseActivity" />
 
         <activity
-            android:name=".component.activity.CastChartActivity"
+            android:name=".component.activity.RankingListActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.baseActivity" />
