--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,7 @@ Andorid/build/android-profile/profile-2018-09-10-21-26-14-119.rawproto
 Andorid/build/android-profile/profile-2018-09-10-22-22-44-723.rawproto
 Andorid/build/android-profile/profile-2018-09-10-22-19-49-613.rawproto
 Andorid/build/android-profile/profile-2018-09-10-22-18-19-471.rawproto
+Andorid/build/android-profile/profile-2018-09-11-20-26-55-062.rawproto
+Andorid/build/android-profile/profile-2018-09-11-20-20-06-013.rawproto
+Andorid/build/android-profile/profile-2018-09-11-20-26-43-802.rawproto
+Andorid/build/android-profile/profile-2018-09-11-20-25-14-978.rawproto
