캐스팅 알람 화면 추가

--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,25 @@ Andorid/build/android-profile/profile-2018-09-11-20-26-55-062.rawproto
 Andorid/build/android-profile/profile-2018-09-11-20-20-06-013.rawproto
 Andorid/build/android-profile/profile-2018-09-11-20-26-43-802.rawproto
 Andorid/build/android-profile/profile-2018-09-11-20-25-14-978.rawproto
+Andorid/build/android-profile/profile-2018-09-11-21-28-31-584.rawproto
+Andorid/build/android-profile/profile-2018-09-11-21-23-52-429.rawproto
+Andorid/build/android-profile/profile-2018-09-11-21-10-28-036.rawproto
+Andorid/build/android-profile/profile-2018-09-11-20-34-48-108.rawproto
+Andorid/build/android-profile/profile-2018-09-11-21-18-05-052.rawproto
+Andorid/build/android-profile/profile-2018-09-11-21-15-53-943.rawproto
+Andorid/build/android-profile/profile-2018-09-11-20-36-23-125.rawproto
+Andorid/build/android-profile/profile-2018-09-11-20-36-37-345.rawproto
+Andorid/build/android-profile/profile-2018-09-11-23-28-31-503.rawproto
+Andorid/build/android-profile/profile-2018-09-11-23-26-14-717.rawproto
+Andorid/build/android-profile/profile-2018-09-11-23-22-38-995.rawproto
+Andorid/build/android-profile/profile-2018-09-11-23-21-09-456.rawproto
+Andorid/build/android-profile/profile-2018-09-11-23-15-58-787.rawproto
+Andorid/build/android-profile/profile-2018-09-11-23-11-42-740.rawproto
+Andorid/build/android-profile/profile-2018-09-11-23-10-23-086.rawproto
+Andorid/build/android-profile/profile-2018-09-11-23-10-00-242.rawproto
+Andorid/build/android-profile/profile-2018-09-11-22-30-29-109.rawproto
+Andorid/build/android-profile/profile-2018-09-11-22-29-30-183.rawproto
+Andorid/build/android-profile/profile-2018-09-11-22-28-08-178.rawproto
+Andorid/build/android-profile/profile-2018-09-11-22-12-39-961.rawproto
+Andorid/build/android-profile/profile-2018-09-11-21-41-51-445.rawproto
+Andorid/build/android-profile/profile-2018-09-11-21-40-12-534.rawproto
