--- a/.gitignore
+++ b/.gitignore
@@ -390,3 +390,68 @@ Andorid/build/android-profile/profile-2018-09-11-22-28-08-178.rawproto
 Andorid/build/android-profile/profile-2018-09-11-22-12-39-961.rawproto
 Andorid/build/android-profile/profile-2018-09-11-21-41-51-445.rawproto
 Andorid/build/android-profile/profile-2018-09-11-21-40-12-534.rawproto
+Andorid/build/android-profile/profile-2018-09-12-23-42-20-740.rawproto
+Andorid/build/android-profile/profile-2018-09-12-23-40-35-053.rawproto
+Andorid/build/android-profile/profile-2018-09-12-23-38-53-875.rawproto
+Andorid/build/android-profile/profile-2018-09-12-23-37-40-671.rawproto
+Andorid/build/android-profile/profile-2018-09-12-23-37-01-326.rawproto
+Andorid/build/android-profile/profile-2018-09-12-23-34-14-098.rawproto
+Andorid/build/android-profile/profile-2018-09-12-22-22-45-763.rawproto
+Andorid/build/android-profile/profile-2018-09-12-22-16-51-406.rawproto
+Andorid/build/android-profile/profile-2018-09-12-22-03-06-966.rawproto
+Andorid/build/android-profile/profile-2018-09-12-22-02-18-807.rawproto
+Andorid/build/android-profile/profile-2018-09-12-22-00-16-951.rawproto
+Andorid/build/android-profile/profile-2018-09-12-21-48-26-593.rawproto
+Andorid/build/android-profile/profile-2018-09-12-21-43-11-831.rawproto
+Andorid/build/android-profile/profile-2018-09-12-21-35-36-332.rawproto
+Andorid/build/android-profile/profile-2018-09-13-12-56-08-534.rawproto
+Andorid/build/android-profile/profile-2018-09-13-12-35-12-943.rawproto
+Andorid/build/android-profile/profile-2018-09-13-12-33-09-044.rawproto
+Andorid/build/android-profile/profile-2018-09-13-12-16-30-560.rawproto
+Andorid/build/android-profile/profile-2018-09-13-12-11-37-612.rawproto
+Andorid/build/android-profile/profile-2018-09-13-12-05-00-075.rawproto
+Andorid/build/android-profile/profile-2018-09-13-10-25-57-396.rawproto
+Andorid/build/android-profile/profile-2018-09-13-10-12-37-241.rawproto
+Andorid/build/android-profile/profile-2018-09-13-10-00-46-913.rawproto
+Andorid/build/android-profile/profile-2018-09-13-09-59-40-640.rawproto
+Andorid/build/android-profile/profile-2018-09-13-09-25-03-943.rawproto
+Andorid/build/android-profile/profile-2018-09-13-09-24-44-647.rawproto
+Andorid/build/android-profile/profile-2018-09-12-23-45-31-553.rawproto
+Andorid/build/android-profile/profile-2018-09-12-23-43-15-884.rawproto
+Andorid/build/android-profile/profile-2018-09-13-22-17-19-353.rawproto
+Andorid/build/android-profile/profile-2018-09-13-22-17-04-041.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-49-56-508.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-49-15-495.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-41-26-637.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-40-54-665.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-37-06-478.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-35-55-504.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-27-54-514.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-26-32-803.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-25-12-592.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-13-55-295.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-08-04-743.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-06-25-829.rawproto
+Andorid/build/android-profile/profile-2018-09-13-20-01-38-134.rawproto
+Andorid/build/android-profile/profile-2018-09-13-19-24-52-872.rawproto
+Andorid/build/android-profile/profile-2018-09-13-19-23-23-600.rawproto
+Andorid/build/android-profile/profile-2018-09-13-17-40-54-130.rawproto
+Andorid/build/android-profile/profile-2018-09-13-17-40-19-059.rawproto
+Andorid/build/android-profile/profile-2018-09-13-17-37-28-798.rawproto
+Andorid/build/android-profile/profile-2018-09-13-17-35-30-895.rawproto
+Andorid/build/android-profile/profile-2018-09-13-17-33-18-408.rawproto
+Andorid/build/android-profile/profile-2018-09-13-16-00-05-717.rawproto
+Andorid/build/android-profile/profile-2018-09-13-15-57-15-382.rawproto
+Andorid/build/android-profile/profile-2018-09-13-15-55-52-271.rawproto
+Andorid/build/android-profile/profile-2018-09-13-14-49-10-588.rawproto
+Andorid/build/android-profile/profile-2018-09-13-13-01-38-570.rawproto
+Andorid/build/android-profile/profile-2018-09-13-12-58-48-356.rawproto
+Andorid/build/android-profile/profile-2018-09-12-21-33-25-735.rawproto
+Andorid/build/android-profile/profile-2018-09-12-21-30-44-850.rawproto
+Andorid/build/android-profile/profile-2018-09-12-21-29-52-683.rawproto
+Andorid/build/android-profile/profile-2018-09-12-21-26-59-062.rawproto
+Andorid/build/android-profile/profile-2018-09-12-21-11-16-121.rawproto
+Andorid/build/android-profile/profile-2018-09-12-20-32-20-829.rawproto
+Andorid/build/android-profile/profile-2018-09-12-20-27-42-596.rawproto
+Andorid/build/android-profile/profile-2018-09-12-17-27-01-727.rawproto
+Andorid/build/android-profile/profile-2018-09-12-17-26-40-813.rawproto
